--- a/primer proyecto/app/views/images/_image.html.erb
+++ b/primer proyecto/app/views/images/_image.html.erb
@@ -1,4 +1,4 @@
-<%= @image.description%> <br>
+<%= image.description%> <br>
 <%= link_to 'Editar', edit_image_path(image) %><br>
 <%= link_to 'Eliminar', image, method: :delete, data:{ 
     confirm: 'Esta seguro que decea eliminar esta imagen.'  } %>
